<resources>
    <string name="app_name">TP3</string>
    <string name="level">Level:</string>
    <string name="click_the_button">CLICK THE BUTTON!</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="start_again">START AGAIN</string>
    <string name="textview">TextView</string>
    <string name="effacer">EFFACER</string>
    <string name="back">BACK</string>
</resources>