<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="852dp"
        android:layout_height="329dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds"
        tools:padding="20dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button"
            android:layout_width="97dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:onClick="updateUI"
            android:padding="1dp"
            android:paddingTop="1dp"
            android:text="@string/click_the_button"
            android:textColor="#1B1818"
            android:textSize="20sp"
            android:textStyle="normal"
            app:backgroundTint="#918D8D"
            app:iconPadding="4dp"
            tools:ignore="TextSizeCheck,UsingOnClickInXml" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="102dp"
            android:layout_height="137dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="113dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="87dp"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:text="@string/score"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/level"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="VisualLintBounds">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/_1"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="47dp"
            android:layout_height="67dp"
            android:layout_weight="1"
            android:onClick="init"
            android:text="@string/start_again"
            android:textColor="#1E1B1B"
            android:textSize="20sp"
            app:backgroundTint="#908C8C"
            tools:ignore="TextSizeCheck,UsingOnClickInXml" />

        <Space
            android:layout_width=".5dp"
            android:layout_height="91dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>